feat: update smth

--- a/client/components/Landing/Landing.scss
+++ b/client/components/Landing/Landing.scss
@@ -1,5 +1,4 @@
-$primary-color: #008B8B;
-$primary-darkened: darken($primary-color, 7);
+@import "../../variables";
 $shadow-size: 7px;
 $shadow-offset: 2px;
 
