--- a/client/components/Map/Map.scss
+++ b/client/components/Map/Map.scss
@@ -1,25 +1,22 @@
+@import '../../variables';
+
 $minimap-width: 300px;
 $minimap-height: 200px;
+$header-height: 7vh;
 
-.ymaps-2-1-75-panorama-control__fullscreen {
-  position: fixed;
-  top: 10vh;
-  left: 12px;
-}
 .game-header {
-  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  height: 7vh;
+  height: $header-height;
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  background-color: #00000080;
+  background-color: $primary-color;
 }
 .player {
   width: 100vw;
-  height: 100vh;
+  height: 100vh - $header-height;
 }
 .minimap {
   width: $minimap-width - 100px;
